kubernetes/apps/home/recipes/app/volsync-restore-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: restore-ctrl-recipes
  namespace: home
spec:
  containers:
    - name: mount-restore
      image: ubuntu
      command: [ "/bin/bash", "-c", "while true; do sleep 30; done" ]
      volumeMounts:
        - name: ctrl-recipes-media
          mountPath: /ctrl/media
        - name: local-recipes-media
          mountPath: /local/media
        - name: local-recipes-static
          mountPath: /local/static
  volumes:
    - name: ctrl-recipes-media
      persistentVolumeClaim:
        claimName: recipes-media-restore-ctrl
    - name: local-recipes-media
      persistentVolumeClaim:
        claimName: recipes-media
    - name: local-recipes-static
      persistentVolumeClaim:
        claimName: recipes-static
