kubernetes/apps/home/recipes/app/svc-psql.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: recipes-postgresql
    tier: database
  name: recipes-postgresql
  namespace: home
spec:
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: postgresql
  selector:
    app: recipes-postgresql
    tier: database
  sessionAffinity: None
  type: ClusterIP
