kubernetes/apps/home/recipes/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_PRIVATE_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/group: "home"
    hajimari.io/icon: "food"
  name: recipes
  namespace: home
spec:
  ingressClassName: "nginx"
  rules:
    - host: recipes.${SECRET_PUBLIC_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: recipes
                port:
                  number: 8080
            path: /
            pathType: Prefix
          - backend:
              service:
                name: recipes
                port:
                  number: 80
            path: /media
            pathType: Prefix
          - backend:
              service:
                name: recipes
                port:
                  number: 80
            path: /static
            pathType: Prefix
  tls:
    - hosts:
        - recipes.${SECRET_PUBLIC_DOMAIN}
